--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry-core"]
