--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Lint code
+name: Test code
 run-name: ${{ github.actor }} is learning GitHub Actions
 
 on:
@@ -7,7 +7,7 @@ on:
       - master
       - integration
 jobs:
-  lint-code:
+  unit-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,5 +16,6 @@ jobs:
         with:
           python-version: '3.8'
           cache: 'pip'
-      - run: pip install flake8
-      - run: flake8
+      - run: pip install poetry
+      - run: poetry install
+      - run: poetry run pytest
