--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -18,5 +18,5 @@ jobs:
           cache: 'pip'
       - run: pip install poetry
       - run: poetry install
-      - run: flake8
+      - run: poetry run flake8
       - run: poetry run pytest
