--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,5 @@
 name: Build
-run-name: ${{ github.actor }} is learning GitHub Actions
+run-name: ${{ github.actor }} ran build
 
 on:
   pull_request:
