--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -1,5 +1,5 @@
 name: Test
-run-name: ${{ github.actor }} is learning GitHub Actions
+run-name: ${{ github.actor }} ran Unit-tests
 
 on:
   pull_request:
